<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:background="#87CEEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/background_sky"
        android:contentDescription="@string/desc_background" />

    <ImageView
        android:id="@+id/tree_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/tree_stage_2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/status_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:contentDescription="@string/desc_tree" />

    <androidx.cardview.widget.CardView
        android:id="@+id/status_panel"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:cardBackgroundColor="#E098B486"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_title"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout style="@style/StatusRowStyle">
                <ImageView style="@style/StatusIconStyle" android:src="@drawable/icon_flower" android:contentDescription="@string/desc_icon" />
                <TextView style="@style/StatusTextStyle" android:text="@string/status_type" />
            </LinearLayout>

            <LinearLayout style="@style/StatusRowStyle">
                <ImageView style="@style/StatusIconStyle" android:src="@drawable/icon_sprout" android:contentDescription="@string/desc_icon" />
                <TextView style="@style/StatusTextStyle" android:text="@string/status_stage" />
            </LinearLayout>

            <LinearLayout style="@style/StatusRowStyle">
                <ImageView style="@style/StatusIconStyle" android:src="@drawable/icon_sunflower" android:contentDescription="@string/desc_icon" />
                <TextView style="@style/StatusTextStyle" android:text="@string/status_flower" />
            </LinearLayout>

            <LinearLayout style="@style/StatusRowStyle">
                <ImageView style="@style/StatusIconStyle" android:src="@drawable/icon_water" android:contentDescription="@string/desc_icon" />
                <TextView style="@style/StatusTextStyle" android:text="@string/status_soil" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/nav_item" android:id="@+id/nav_home" />
        <include layout="@layout/nav_item" android:id="@+id/nav_status" />
        <include layout="@layout/nav_item" android:id="@+id/nav_setting" />
        <include layout="@layout/nav_item" android:id="@+id/nav_result" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>